--- a/opshop/templates/base.html
+++ b/opshop/templates/base.html
@@ -12,7 +12,9 @@
 <div class="col-xs-6" style="margin: 0 auto 0 auto; float: none; text-align: center;">
 {% bootstrap_messages jquery=1 %}
 </div>
-<h1 style="text-align: center">Welcome to the op-shop!</h1>
+{% block top %}
+{% endblock %}
+<h1 style="text-align: center; margin-top: 50px;">Welcome to the op-shop!</h1>
 <div class="col-xs-6" style="margin: 0 auto 0 auto; float: none;">
 {% block content %}
 {% endblock %}
@@ -27,6 +29,9 @@ $(".alert-dismissable").fadeTo(10000, 500).slideUp(500, function(){
     var snd = new Audio("{% static "cash-register.wav" %}");
     snd.play();
 {% endif %}
+{% block js %}
+{% endblock %}
+
 </script>
 </body>
 </html>
