--- a/opshop/templates/base.html
+++ b/opshop/templates/base.html
@@ -14,6 +14,7 @@
             top: 0;
         }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
