Added lots of stuff

--- a/opshop/app/templates/app/sale.html
+++ b/opshop/app/templates/app/sale.html
@@ -27,7 +27,7 @@
             </button>
         {% endbuttons %}
     </form>
-    <button type="submit" class="btn btn-success pull-right" data-toggle="modal" data-target="#top_up"><i class="glyphicon glyphicon-eur"></i> Top up my account</button>
+    <button style="margin-top: 75px" type="submit" class="btn btn-success pull-right" data-toggle="modal" data-target="#top_up"><i class="glyphicon glyphicon-eur"></i> Top up my account</button>
 <div class="modal" id="livestream_scanner">
 	<div class="modal-dialog">
 		<div class="modal-content">
