--- a/opshop/templates/base.html
+++ b/opshop/templates/base.html
@@ -18,13 +18,13 @@
 
 </head>
 <body>
-<div class="col-xs-6" style="margin: 0 auto 0 auto; float: none; text-align: center;">
+<div class="col-xs-12 col-lg-6" style="margin: 0 auto 0 auto; float: none; text-align: center;">
     {% bootstrap_messages jquery=1 %}
 </div>
 {% block top %}
 {% endblock %}
-<h1 style="text-align: center; margin-top: 50px;">Welcome to the op-shop!</h1>
-<div class="col-xs-6" style="margin: 0 auto 0 auto; float: none;">
+<h1 style="text-align: center; margin-top: 50px;">Welcome to the candy shop!</h1>
+<div class="col-xs-12 col-lg-6" style="margin: 0 auto 0 auto; float: none;">
     {% block content %}
     {% endblock %}
 </div>
