--- a/opshop/app/templates/app/account.html
+++ b/opshop/app/templates/app/account.html
@@ -19,6 +19,7 @@
 				<h4 class="modal-title">Create your account</h4>
 			</div>
 			<div class="modal-body" style="position: static">
+                The easiest and probably most unsafe registration form ever!
                 {% bootstrap_field form.user %}
 			</div>
 			<div class="modal-footer">
