Removed error sound

--- a/opshop/app/templates/app/sale.html
+++ b/opshop/app/templates/app/sale.html
@@ -86,6 +86,7 @@
 			</div>
 			<div class="modal-body" style="position: static">
                 {% bootstrap_field account_form.user %}
+                The easiest registration form, ever!
 			</div>
 			<div class="modal-footer">
 				<button type="submit" class="btn btn-primary">Create my account</button>
