--- a/opshop/templates/base.html
+++ b/opshop/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>OpShop!</title>
+    <title>Candy shop | snacks.4lunch.eu</title>
 
     {% bootstrap_css %}
     <style>
